# snek

./: .gitignore  pyproject.toml
snek/: main.py  reducer.py  repository.py  requirement.py  resolver.py  utils.py
tests/: conftest.py  test_reducer.py  test_repository.py  test_requirement.py  test_resolver.py  test_snek.py
tests/fixtures/json/: pypi_Pygments.json  pypi_Werkzeug.json  pypi_alabaster.json  pypi_aspy.yaml.json  pypi_atomicwrites.json  pypi_attrs.json  pypi_babel.json  pypi_certifi.json  pypi_cfgv.json  pypi_chardet.json  pypi_click.json  pypi_coverage.json  pypi_docutils.json  pypi_entrypoints.json  pypi_filelock.json  pypi_flake8-bugbear.json  pypi_flake8.json  pypi_flask.json  pypi_hypothesis.json  pypi_identify.json  pypi_idna.json  pypi_imagesize.json  pypi_importlib-metadata.json  pypi_itsdangerous.json  pypi_jinja2.json  pypi_markupsafe.json  pypi_mccabe.json  pypi_more-itertools.json  pypi_nodeenv.json  pypi_packaging.json  pypi_pallets-sphinx-themes.json  pypi_pluggy.json  pypi_pre-commit.json  pypi_py.json  pypi_pycodestyle.json  pypi_pyflakes.json  pypi_pympler.json  pypi_pyparsing.json  pypi_pytest.json  pypi_pytz.json  (+21 more)
tests/fixtures/pypi/: pypi_alabaster.json  pypi_atomicwrites.json  pypi_attrs.json  pypi_babel.json  pypi_certifi.json  pypi_chardet.json  pypi_click.json  pypi_colorama.json  pypi_configparser.json  pypi_contextlib2.json  pypi_coverage.json  pypi_docutils.json  pypi_filelock.json  pypi_flask.json  pypi_idna.json  pypi_imagesize.json  pypi_importlib-metadata.json  pypi_itsdangerous.json  pypi_jinja2.json  pypi_markupsafe.json  (+33 more)
(+5 files in other folders)
