[tool.poetry]
name = "snek"
version = "0.1.0"
description = ""
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23"
packaging = "^20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-mock = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
